--- a/index.html
+++ b/index.html
@@ -52,16 +52,16 @@
                 I'm a passionate and creative Graphic Designer and UI Designer/Developer with a strong desire to craft visually stunning and user-friendly digital experiences. With a deep love for design, coding, and problem-solving, I constantly seek opportunities to innovate and enhance user interactions in this ever-evolving field.</p>
             
             <div class="btn-group">
-                <a href="files/DharmendraResume.pdf" class="btn   active">Download CV</a>
-                <a href="mailto:dharmendrarawat08052022@gmail.com" class="btn">Contact</a>
+                <a href="#" class="btn   active">Download CV</a>
+                <a href="#" class="btn">Contact</a>
             </div>
 
             <div class="social">
-                <a href="mailto:dharmendrarawat08052022@gmail.com"><i class="fa fa-envelope"></i></a>
-                <a href="https://github.com/Rawat20223"><i class="fa-brands fa-github"></i></a>
-                <a href="https://www.behance.net/dharmendrarawat2008"><i class="fa-brands fa-behance"></i></a>
-                <a href="https://www.linkedin.com/in/dharmendra-rawat-74216a2b6/"><i class="fa-brands fa-linkedin"></i></a>
-                <a href="tel:+91 8882677949"><i class="fa-brands fa-square-whatsapp"></i></a>
+                <a href="#"><i class="fa fa-envelope"></i></a>
+                <a href="#"><i class="fa-brands fa-github"></i></a>
+                <a href="#"><i class="fa-brands fa-behance"></i></a>
+                <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+                <a href="#"><i class="fa-brands fa-square-whatsapp"></i></a>
                 
             </div>
         </div>
