--- a/index.html
+++ b/index.html
@@ -139,12 +139,12 @@
     </section>
 
     <!-- Projects Section -->
-    <section id="projects" class="projects">
+   <section id="projects" class="projects">
         <h2 class="section-title">My <span>Projects</span></h2>
         <div class="projects-container">
             <div class="project-card">
                 <div class="project-img">
-                    <img src="https://ik.imagekit.io/dv1rw2o90/WhatsApp%20Image%202025-01-25%20at%2011.20.43_048b7faf.jpg?updatedAt=1742465025343" alt="Project 1">
+                    <img src="https://ik.imagekit.io/dv1rw2o90/Untitled%20design%20(11).png?updatedAt=1743060236016" alt="Project 1">
                 </div>
                 <div class="project-info">
                     <h3>Home Health Care</h3>
@@ -157,7 +157,7 @@
             </div>
             <div class="project-card">
                 <div class="project-img">
-                    <img src="https://images.unsplash.com/photo-1467232004584-a241de8bcf5d?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=869&q=80" alt="Project 2">
+                    <img src="https://ik.imagekit.io/dv1rw2o90/Untitled%20design%20(10).png?updatedAt=1743060082304" alt="Project 2">
                 </div>
                 <div class="project-info">
                     <h3>Fitness App UI</h3>
@@ -170,14 +170,14 @@
             </div>
             <div class="project-card">
                 <div class="project-img">
-                    <img src="https://images.unsplash.com/photo-1551434678-e076c223a692?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=870&q=80" alt="Project 3">
+                    <img src="https://ik.imagekit.io/dv1rw2o90/Untitled%20design%20(12).png?updatedAt=1743061272988" alt="Project 3">
                 </div>
                 <div class="project-info">
-                    <h3>Travel Booking Platform</h3>
-                    <p>Web platform for booking travel experiences with interactive maps, review system, and personalized recommendations.</p>
+                    <h3>The Blissfuull Hives</h3>
+                    <p>The Blissful Hives – Nurturing special minds with care, learning, and growth. 🌿✨ #SpecialEducation #InclusiveLearning</p>
                     <div class="project-links">
-                        <a href="#"><i class="fas fa-external-link-alt"></i> Live Demo</a>
-                        <a href="#"><i class="fab fa-github"></i> Code</a>
+                        <a href="https://ik.imagekit.io/dv1rw2o90/the-blissfuull-hives.png?updatedAt=1743061074623"><i class="fas fa-external-link-alt"></i> Live Demo</a>
+                        <a href="https://www.behance.net/dharmendrarawat2008"><i class="fab fa-behance"></i> Behance</a>
                     </div>
                 </div>
             </div>
