--- a/index.html
+++ b/index.html
@@ -157,14 +157,14 @@
             </div>
             <div class="project-card">
                 <div class="project-img">
-                    <img src="https://ik.imagekit.io/dv1rw2o90/Untitled%20design%20(10).png?updatedAt=1743060082304" alt="Project 2">
+                    <img src="https://ik.imagekit.io/dv1rw2o90/Untitled%20design%20(13).png?updatedAt=1743068962646" alt="Project 2">
                 </div>
                 <div class="project-info">
-                    <h3>Fitness App UI</h3>
-                    <p>Mobile application interface for fitness tracking with workout plans, progress visualization, and social features.</p>
+                    <h3>Navratri Special</h3>
+                    <p>"Celebrate Navratri with joy, devotion, and vibrant colors of festivity! 🪔✨"</p>
                     <div class="project-links">
-                        <a href="#"><i class="fas fa-external-link-alt"></i> Live Demo</a>
-                        <a href="#"><i class="fab fa-github"></i> Code</a>
+                        <a href="https://ik.imagekit.io/dv1rw2o90/Cream%20and%20Red%20Traditional%20Happy%20Navratri%20Greeting%20Animated%20Social%20Media.mp4?updatedAt=1743068642818"><i class="fas fa-external-link-alt"></i> Live Demo</a>
+                       <a href="https://www.behance.net/dharmendrarawat2008"><i class="fab fa-behance"></i> Behance</a>
                     </div>
                 </div>
             </div>
