--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                 <div class="content">
                     <h2>2021 — 2024</h2>
                     <h3>Bachelor Of Commerce</h3>
-                    <p>School Open Learning (SOL)</p>
+                    <p><b>School Open Learning (SOL)</b></p>
                     <p>Bachelor of Commerce graduate with knowledge in accounting, finance, and business management.</p>
                 </div>
             </div>
@@ -99,7 +99,7 @@
                 <div class="content">
                     <h2>2022 — 2024</h2>
                     <h3>Graphic & Web Development</h3>
-                    <p>Arena Animation </p>
+                    <p><b>Arena Animation</b> </p>
                     <p>Completed Graphic & Web Development course at Arena Animation, gaining skills in design & coding.</p>
                 </div>
             </div>
