--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 <div class="content">
                     <h2>Present</h2>
                     <h3>Freelance</h3>
-                    <p>Multi-Client Website Management</p>
+                    <p><b>Multi-Client Website Management</b></p>
                     <p>"I manage and maintain client websites, ensuring seamless performance through daily updates, modifications, and optimizations. From implementing client requests to enhancing content, I keep websites modern, efficient, and user-friendly. Additionally, I collaborate with graphic and UI developers to create visually appealing and intuitive web experiences."</p>
                 </div>
             </div>
@@ -75,7 +75,7 @@
                 <div class="content">
                     <h2>2024 - Present</h2>
                     <h3>UI/UX Developer</h3>
-                    <p>Select Your University</p>
+                    <p><b>Select Your University</b></p>
                     <p>After graduating from [Select Your University], I began my career as a UI Developer, designing interactive websites and high-converting landing pages. As an in-house developer, I enhanced user interaction by blending aesthetics with functionality, modernizing digital experiences.</p>
                 </div>
             </div>
