--- a/index.html
+++ b/index.html
@@ -180,14 +180,15 @@
                         <a href="https://www.behance.net/dharmendrarawat2008"><i class="fab fa-behance"></i> Behance</a>
                     </div>
                 </div>
-                <div class="project-info">
-                    <h3>Socialchemy</h3>
-                    <p>Top digital marketing agency to enhance brand visibility, drive high-quality leads, and maximize conversions. Refine audience targeting for better engagement.</p>
-                    <div class="project-links">
-                        <a href="https://ik.imagekit.io/dv1rw2o90/Untitled%20design%20(15).png?updatedAt=1743664416847"><i class="fas fa-external-link-alt"></i> Live Demo</a>
-                        <a href="https://thesocialchemy.com/"><i class="fab fa-github"></i> Github</a>
-                    </div>
+               
+            </div>
+
+            <div class="project-card">
+                <div class="project-img">
+                    <img src="https://ik.imagekit.io/dv1rw2o90/Untitled%20design%20(15).png?updatedAt=1743664416847" alt="Project 3">
                 </div>
+               <div class="project-info"> <h3>Socialchemy</h3> <p>Top digital marketing agency to enhance brand visibility, drive high-quality leads, and maximize conversions. Refine audience targeting for better engagement.</p> <div class="project-links"> <a href="https://ik.imagekit.io/dv1rw2o90/Untitled%20design%20(15).png?updatedAt=1743664416847"><i class="fas fa-external-link-alt"></i> Live Demo</a> <a href="https://thesocialchemy.com/"><i class="fab fa-github"></i> Github</a> </div> </div>
+               
             </div>
         </div>
     </section>
