--- a/index.html
+++ b/index.html
@@ -201,14 +201,14 @@
         </div>
         <div class="project-card" data-category="web">
             <div class="project-img">
-                <img src="https://ik.imagekit.io/dv1rw2o90/Untitled%20design%20(15).png" alt="Project 4">
+                <img src="https://ik.imagekit.io/dv1rw2o90/Untitled%20design%20(16).png?updatedAt=1743675659822" alt="Project 4">
             </div>
             <div class="project-info">
-                <h3>Socialchemy</h3>
+                <h3>Select Your University</h3>
                 <p>"Top digital marketing agency to enhance brand visibility and drive leads."</p>
                 <div class="project-links">
-                    <a href="https://thesocialchemy.com/"><i class="fas fa-external-link-alt"></i> Live Demo</a>
-                        <a href="https://www.behance.net/dharmendrarawat2008"><i class="fab fa-github"></i> Github</a>
+                    <a href="https://rawat20223.github.io/east-european-university/"><i class="fas fa-external-link-alt"></i> Live Demo</a>
+                        <a href="https://github.com/Rawat202238"><i class="fab fa-github"></i> Github</a>
                 </div>
             </div>
         </div>
