--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
             </div>
             <div class="project-info">
                 <h3>Select Your University</h3>
-                <p>"Top digital marketing agency to enhance brand visibility and drive leads."</p>
+                <p>"Shaping Future Leaders Through Quality Education."</p>
                 <div class="project-links">
                     <a href="https://rawat20223.github.io/east-european-university/"><i class="fas fa-external-link-alt"></i> Live Demo</a>
                         <a href="https://github.com/Rawat202238"><i class="fab fa-github"></i> Github</a>
