--- a/index.html
+++ b/index.html
@@ -234,52 +234,53 @@
 
     <!-- Contact Section -->
     <section id="contact" class="contact">
-        <h2 class="section-title">Contact <span>Me</span></h2>
-        <div class="contact-container">
-            <div class="contact-info">
-                <div class="contact-card">
-                    <i class="fas fa-envelope"></i>
-                    <div>
-                        <h3>Email</h3>
-                        <p>dharmendrarawat08052022@gmail.com</p>
-                    </div>
-                </div>
-                <div class="contact-card">
-                    <i class="fas fa-phone"></i>
-                    <div>
-                        <h3>Phone</h3>
-                        <p>+91 888-26-77-949</p>
-                    </div>
-                </div>
-                <div class="contact-card">
-                    <i class="fas fa-map-marker-alt"></i>
-                    <div>
-                        <h3>Location</h3>
-                        <p>New Delhi</p>
-                    </div>
+    <h2 class="section-title">Contact <span>Me</span></h2>
+    <div class="contact-container">
+        <div class="contact-info">
+            <div class="contact-card">
+                <i class="fas fa-envelope"></i>
+                <div>
+                    <h3>Email</h3>
+                    <p>dharmendrarawat08052022@gmail.com</p>
                 </div>
             </div>
-            <form class="contact-form">
-                <div class="input-box">
-                    <input type="text" required>
-                    <label>Full Name</label>
+            <div class="contact-card">
+                <i class="fas fa-phone"></i>
+                <div>
+                    <h3>Phone</h3>
+                    <p>+91 888-26-77-949</p>
                 </div>
-                <div class="input-box">
-                    <input type="email" required>
-                    <label>Email</label>
+            </div>
+            <div class="contact-card">
+                <i class="fas fa-map-marker-alt"></i>
+                <div>
+                    <h3>Location</h3>
+                    <p>New Delhi</p>
                 </div>
-                <div class="input-box">
-                    <input type="text" required>
-                    <label>Subject</label>
-                </div>
-                <div class="input-box">
-                    <textarea required rows="5"></textarea>
-                    <label>Message</label>
-                </div>
-                <button type="submit" class="form-btn">Send Message</button>
-            </form>
+            </div>
         </div>
-    </section>
+        <form class="contact-form" onsubmit="sendToWhatsApp(event)">
+            <div class="input-box">
+                <input type="text" id="name" required>
+                <label>Full Name</label>
+            </div>
+            <div class="input-box">
+                <input type="email" id="email" required>
+                <label>Email</label>
+            </div>
+            <div class="input-box">
+                <input type="text" id="subject" required>
+                <label>Subject</label>
+            </div>
+            <div class="input-box">
+                <textarea id="message" required rows="5"></textarea>
+                <label>Message</label>
+            </div>
+            <button type="submit" class="form-btn">Send Message</button>
+        </form>
+    </div>
+</section>
+
 
     <!-- Footer -->
     <footer>
