--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                 <h3>Home Health Care</h3>
                 <p>"Compassionate and professional home health care services tailored to your needs."</p>
                 <div class="project-links">
-                    <a href="https://ik.imagekit.io/dv1rw2o90/the-blissfuull-hives.png?updatedAt=1743061074623"><i class="fas fa-external-link-alt"></i> Live Demo</a>
+                    <a href="https://ik.imagekit.io/dv1rw2o90/WhatsApp%20Image%202025-01-25%20at%2011.20.43_048b7faf.jpg?updatedAt=1742465025343"><i class="fas fa-external-link-alt"></i> Live Demo</a>
                         <a href="https://www.behance.net/dharmendrarawat2008"><i class="fab fa-behance"></i> Behance</a>
                 </div>
             </div>
@@ -168,7 +168,7 @@
                 <h3>Navratri Special</h3>
                 <p>"Celebrate Navratri with joy, devotion, and vibrant colors of festivity!"</p>
                 <div class="project-links">
-                    <a href="https://ik.imagekit.io/dv1rw2o90/the-blissfuull-hives.png?updatedAt=1743061074623"><i class="fas fa-external-link-alt"></i> Live Demo</a>
+                    <a href="https://ik.imagekit.io/dv1rw2o90/Cream%20and%20Red%20Traditional%20Happy%20Navratri%20Greeting%20Animated%20Social%20Media.mp4?updatedAt=1743068642818"><i class="fas fa-external-link-alt"></i> Live Demo</a>
                         <a href="https://www.behance.net/dharmendrarawat2008"><i class="fab fa-behance"></i> Behance</a>
                 </div>
             </div>
